# markdowndiff

./: README.md  pyproject.toml
src/markdowndiff/: __init__.py  __main__.py  cli.py  engine.py  fence.py  git_ops.py  processing.py  styles.py  word_diff.py  wrap.py
tests/: test_markdowndiff.py
