[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markdowndiff"
version = "0.4.3"
description = "Generate rendered-markdown diff files for visual review in IDE markdown previews."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Cognizone" },
]
keywords = ["markdown", "diff", "git", "review", "claude-code"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/cognizone/markdowndiff"
Repository = "https://github.com/cognizone/markdowndiff"
Issues = "https://github.com/cognizone/markdowndiff/issues"

[project.scripts]
markdowndiff = "markdowndiff:main"

[tool.hatch.build.targets.wheel]
packages = ["src/markdowndiff"]

[tool.hatch.build.targets.sdist]
include = [
  "src/markdowndiff",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
